Restarted from Rewind base
I brought in the code from Rewind to start from so I can skip alot of the base work.

--- a/css/site.css
+++ b/css/site.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #2066cf;
-    --secondary-color: #f02d2d;
+    --primary-color: #7200cf;
+    --secondary-color: #625e66;
     --dark-color: #292929;
     --white-color: #e7e7e7;
 
@@ -8,7 +8,28 @@
 
 body {
     color: var(--dark-color);
+    font-family: 'IM Fell English', serif;
+    
 }
+
+.appbody{
+    color: #444444;
+}
+
+.logoFont {
+    font-family: 'Bangers', cursive;
+}
+
+.headerFont{
+    font-family: 'Bangers', cursive;
+    color: #2c2a2c;
+}
+
+.enterheader {
+    font-family: 'Bangers', cursive;
+    color: #7200cf;
+}
+
 
 nav {
     background-color: var(--dark-color);
@@ -77,7 +98,7 @@ img {
 }
 
 .checklist>li i {
-    color: rgb(228, 108, 9);
+    color: rgb(202, 9, 228);
 }
 
 code[class*="language-"],
@@ -85,4 +106,15 @@ pre[class*="language-"] {
     white-space: pre-wrap;
     word-break: break-all;
     word-wrap: break-word;
+}
+
+#btnSubmit{
+background-color: rgb(195, 0, 255);
+color: white;
+font-family: 'Bangers', cursive;
+}
+
+#alert{
+    color: rgb(0, 100, 5);
+    font-family: 'IM Fell English', serif;
 }
