--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #7200cf;
+    --primary-color: #cf8700;
     --secondary-color: #625e66;
     --dark-color: #292929;
     --white-color: #e7e7e7;
@@ -21,13 +21,13 @@ body {
 }
 
 .headerFont{
-    font-family: 'Bangers', cursive;
+    font-family: 'Mouse Memoirs', sans-serif;
     color: #2c2a2c;
 }
 
 .enterheader {
     font-family: 'Bangers', cursive;
-    color: #7200cf;
+    color: #cf8700;
 }
 
 
@@ -64,7 +64,7 @@ footer .social>a {
 
 footer .social>a:hover {
     opacity: 0.90;
-    color: var(--secondary-color);
+    color: rgb(195, 0, 255);
 }
 
 .sticky-footer {
@@ -98,7 +98,7 @@ img {
 }
 
 .checklist>li i {
-    color: rgb(202, 9, 228);
+    color: #cf8700;
 }
 
 code[class*="language-"],
